--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>title</title>
+    <title>Change Title Raym648</title>
   </head>
   <body>
-    
+    <h1>The change is now</h1>
   </body>
 </html>
